--- a/index.html
+++ b/index.html
@@ -415,6 +415,23 @@
                     </span>
                 </a>
 
+<!-- Design Playground -->
+<a href="https://eriaidesign.github.io/design-playground/" 
+   class="project-card" target="_blank" rel="noopener">
+    <span class="project-tag">Web Tool</span>
+    <h3>Design Playground</h3>
+    <p>A practical design cheat sheet featuring color tools, spacing visualizers, 
+       border-radius previews, and a full box-model simulator. Built for creators 
+       who want fast, visual feedback without opening heavy design software.</p>
+    <span class="project-link">
+        View Tool
+        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M5 12h14M12 5l7 7-7 7" stroke="currentColor" 
+                  stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+    </span>
+</a>
+
                 <!-- Placeholder for future projects -->
                 <div class="project-card" style="opacity: 0.5; pointer-events: none;">
                     <span class="project-tag">Coming Soon</span>
